[gd_scene load_steps=9 format=3 uid="uid://b06dg2bwclg3c"]

[ext_resource type="Texture2D" uid="uid://c637f1lav4ohe" path="res://assets/player/parrot.png" id="1_1mou6"]
[ext_resource type="Script" path="res://scenes/animal/animal.gd" id="1_bjk2a"]
[ext_resource type="Texture2D" uid="uid://d2sonw12dlcih" path="res://assets/items/arrow.png" id="3_2uyw6"]
[ext_resource type="AudioStream" uid="uid://c7cw0mhagl06w" path="res://assets/audio/stretch2.ogg" id="4_lj3nm"]
[ext_resource type="AudioStream" uid="uid://qurn8ccek0n2" path="res://assets/audio/catapult.ogg" id="5_hvakn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ppku"]
radius = 19.0

[sub_resource type="Animation" id="Animation_c3rig"]
resource_name = "rotation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cuy0t"]
_data = {
"rotation": SubResource("Animation_c3rig")
}

[node name="Animal" type="RigidBody2D"]
input_pickable = true
freeze = true
script = ExtResource("1_bjk2a")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_1mou6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5ppku")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1, 0.500002)
scale = Vector2(2.1, 2.25)

[node name="Label" type="Label" parent="."]
offset_left = -25.0
offset_top = -56.0
offset_right = 26.0
offset_bottom = -33.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "READY"

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_2uyw6")
offset = Vector2(150, 2.08165e-12)

[node name="StrecthSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lj3nm")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hvakn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cuy0t")
}

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
